Update CSS for notes and important information in markdown
**What type of PR is this?**

/kind documentation
[skip ci]

**What does this PR do / why we need it:**

Updates the CSS for inclusion of custom div's such as important and note
as per PR: https://github.com/openshift/odo/pull/3084

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/doks-theme/_sass/objects/_section.scss
+++ b/doks-theme/_sass/objects/_section.scss
@@ -19,3 +19,19 @@
 .section--grey {
 	background-color: $color-section-grey;
 }
+
+/* ----- Notes ----- */    
+.note {    
+  background-color: $color-theme-green;    
+  margin-bottom:1em;    
+  margin-top:1em;    
+  padding:0.5em;    
+}    
+                                  
+/* ----- Important ---- */    
+.important {    
+  background-color: $color-theme-red;    
+  margin-bottom:1em;    
+  margin-top:1em;    
+  padding:0.5em;    
+}
