--- a/doks-theme/_includes/site-head.html
+++ b/doks-theme/_includes/site-head.html
@@ -12,6 +12,6 @@
 {% if page.keywords %}
 	<meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
-<link rel="icon" href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/favicon.ico" type="image/x-icon">
+<!--<link rel="icon" href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/favicon.ico" type="image/x-icon">-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,700,700i|Noto+Sans:400,400i,700,700i|Source+Code+Pro&amp;subset=latin-ext">
 <link rel="stylesheet" href="{% if jekyll.environment == 'production' %}{{ site.doks.baseurl }}{% endif %}/doks-theme/assets/css/style.css">
