--- a/doks-theme/_layouts/default.html
+++ b/doks-theme/_layouts/default.html
@@ -15,7 +15,7 @@
 									<h1 class="hero-subheader__title">{{ page.title }}</h1>
 								{% endif %}
 								{% if page.date %}
-									<p>{{ page.date | date: '%y %b %d' }}</p>
+									<p>{{ page.date | date: '%b %d %Y' }}</p>
 								{% endif %}
 								{% if page.description %}
 									<p class="hero-subheader__desc">{{ page.description }}</p>
